fix : parent_site flex wrap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,6 @@
 
 .parent_site {
   display: flex;
-  flex-wrap: wrap;
   gap: 5rem;
 }
 
